syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc FindOne (FindOneRequest) returns (Product);
  rpc GetAllProducts (GetAllRequest) returns (ProductsResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
}

message FindOneRequest {
  string id = 1;
}

message GetAllRequest {}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
}

message ProductsResponse {
  repeated Product products = 1;
}